# esp32-ai-agent

./: .gitignore  CMakeLists.txt  README.md  partitions-16MiB.csv  sdkconfig
components/AUDIO/: CMakeLists.txt  audio.cpp  idf_component.yml
components/AUDIO/include/: audio.h
components/KEY/: key.c
components/KEY/include/: key.h
components/LCD/: CMakeLists.txt  idf_component.yml  lazy_font.c  lcd.c  lcd_text_bitmap.c  lv_font_chinese_16.c
components/LCD/include/: lazy_font.h  lcd.h  lcd_text_bitmap.h
components/LED/: CMakeLists.txt  helper.h  led.c
components/LED/include/: led.h
components/VOICE_UPLOAD/: CMakeLists.txt  voice_upload.c
components/VOICE_UPLOAD/include/: voice_upload.h
components/WIFI/: CMakeLists.txt  app_wifi.c
components/WIFI/include/: app_wifi.h
fonts/: font_symbols_20.txt  lv_font_chinese_20.c  readme.md
main/: CMakeLists.txt  main.c
tools/: generate_lazy_font.ps1  generate_lazy_font.py  generate_lazy_font.sh
